[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/main/preview.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/color_picker/color_picker.tscn" type="PackedScene" id=2]
[ext_resource path="res://theme/images/background.png" type="Texture" id=3]
[ext_resource path="res://scenes/credits/credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/main/main.gd" type="Script" id=5]
[ext_resource path="res://theme/images/venus.png" type="Texture" id=6]
[ext_resource path="res://theme/resources/loud_eyes.tres" type="Theme" id=7]
[ext_resource path="res://theme/images/mars.png" type="Texture" id=8]
[ext_resource path="res://scenes/main/save_image.gd" type="Script" id=9]
[ext_resource path="res://scenes/main/gender_group.tres" type="ButtonGroup" id=10]
[ext_resource path="res://scenes/main/item_scroll.gd" type="Script" id=11]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.988235, 0.976471, 0.988235, 0.784314 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.94902, 0.454902, 0.72549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SaveImage" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Preview" parent="HBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 638.0
margin_bottom = 720.0
size_flags_horizontal = 3

[node name="MarCon" type="MarginContainer" parent="HBox"]
margin_left = 642.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="VBoxContainer" parent="HBox/MarCon"]
margin_left = 10.0
margin_top = 10.0
margin_right = 628.0
margin_bottom = 710.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="HBox" type="HBoxContainer" parent="HBox/MarCon/Options"]
margin_right = 618.0
margin_bottom = 134.0
size_flags_vertical = 3

[node name="Dropdowns" type="VBoxContainer" parent="HBox/MarCon/Options/HBox"]
margin_right = 307.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBox/MarCon/Options/HBox/Dropdowns"]
margin_right = 307.0
margin_bottom = 65.0
size_flags_vertical = 3

[node name="Female" type="Button" parent="HBox/MarCon/Options/HBox/Dropdowns/HBoxContainer"]
margin_right = 151.0
margin_bottom = 65.0
size_flags_horizontal = 3
toggle_mode = true
pressed = true
group = ExtResource( 10 )
text = "Female"
icon = ExtResource( 6 )
expand_icon = true

[node name="Male" type="Button" parent="HBox/MarCon/Options/HBox/Dropdowns/HBoxContainer"]
margin_left = 155.0
margin_right = 307.0
margin_bottom = 65.0
size_flags_horizontal = 3
toggle_mode = true
group = ExtResource( 10 )
text = "Male"
icon = ExtResource( 8 )
expand_icon = true

[node name="ItemOptions" type="OptionButton" parent="HBox/MarCon/Options/HBox/Dropdowns"]
margin_top = 69.0
margin_right = 307.0
margin_bottom = 134.0
mouse_default_cursor_shape = 2
text = "Item Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPanel" type="PanelContainer" parent="HBox/MarCon/Options/HBox"]
margin_left = 311.0
margin_right = 618.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorBox" type="HBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 297.0
margin_bottom = 124.0

[node name="Skin" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_right = 93.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Skin"]
margin_right = 93.0
margin_bottom = 29.0
text = "Skin"
align = 1

[node name="ColorRect" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Skin"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Eye" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_left = 97.0
margin_right = 190.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Eye"]
margin_right = 93.0
margin_bottom = 29.0
text = "Eye"
align = 1

[node name="ColorRect" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Eye"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Hair" type="VBoxContainer" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox"]
margin_left = 194.0
margin_right = 287.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Hair"]
margin_right = 93.0
margin_bottom = 29.0
text = "Hair"
align = 1

[node name="ColorRect" type="ColorRect" parent="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Hair"]
margin_top = 33.0
margin_right = 93.0
margin_bottom = 114.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HBox/MarCon/Options"]
margin_top = 142.0
margin_right = 618.0
margin_bottom = 627.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
custom_styles/panel = SubResource( 1 )

[node name="ItemScroll" type="ScrollContainer" parent="HBox/MarCon/Options/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 608.0
margin_bottom = 475.0
scroll_horizontal_enabled = false
script = ExtResource( 11 )

[node name="ItemGrid" type="GridContainer" parent="HBox/MarCon/Options/PanelContainer/ItemScroll"]
columns = 4

[node name="Tween" type="Tween" parent="HBox/MarCon/Options/PanelContainer/ItemScroll"]

[node name="Buttons" type="HBoxContainer" parent="HBox/MarCon/Options"]
margin_top = 635.0
margin_right = 618.0
margin_bottom = 700.0

[node name="Clear" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_right = 146.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Clear All"

[node name="Save" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_left = 150.0
margin_right = 296.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Save"

[node name="Load" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_left = 300.0
margin_right = 446.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Load"

[node name="Credits" type="Button" parent="HBox/MarCon/Options/Buttons"]
margin_left = 450.0
margin_right = 617.0
margin_bottom = 65.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Credits & Info"

[node name="Credits" parent="." instance=ExtResource( 4 )]

[node name="ColorPop" type="PopupPanel" parent="."]
visible = true
margin_right = 700.0
margin_bottom = 500.0

[node name="ColorPicker" parent="ColorPop" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 700.0
margin_bottom = 560.0
window_title = "Save your character!"
resizable = true
access = 2
filters = PoolStringArray( "*.png" )
current_dir = "/game_development/projects/sutemo"
current_path = "/game_development/projects/sutemo/"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WaitPop" type="PopupPanel" parent="."]
margin_right = 480.0
margin_bottom = 270.0
rect_min_size = Vector2( 480, 270 )
popup_exclusive = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WaitLabel" type="Label" parent="WaitPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
text = "Generating image..."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="toggled" from="HBox/MarCon/Options/HBox/Dropdowns/HBoxContainer/Female" to="." method="on_gender_selected" binds= [ 0 ]]
[connection signal="toggled" from="HBox/MarCon/Options/HBox/Dropdowns/HBoxContainer/Male" to="." method="on_gender_selected" binds= [ 1 ]]
[connection signal="item_selected" from="HBox/MarCon/Options/HBox/Dropdowns/ItemOptions" to="." method="on_item_option_selected"]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Skin/ColorRect" to="." method="on_color_rect_gui_input" binds= [ 0 ]]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Eye/ColorRect" to="." method="on_color_rect_gui_input" binds= [ 1 ]]
[connection signal="gui_input" from="HBox/MarCon/Options/HBox/ColorPanel/ColorBox/Hair/ColorRect" to="." method="on_color_rect_gui_input" binds= [ 2 ]]
[connection signal="pressed" from="HBox/MarCon/Options/Buttons/Clear" to="." method="on_clear_all_pressed"]
